// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: #0 format[babel]} 1`] = `
"The left-hand side of a for-of loop may not start with 'let'. (1:6)
> 1 | for (let.foo of []);
    |      ^
Cause: The left-hand side of a for-of loop may not start with 'let'. (1:5)"
`;

exports[`snippet: #0 format[babel]} 2`] = `
"The keyword 'let' is reserved (1:6)
> 1 | for (let.foo of []);
    |      ^
Cause: The keyword 'let' is reserved"
`;

exports[`snippet: #0 format[babel]} 3`] = `
"Identifier "let" disallowed as left-hand side expression in strict mode (1:9)
> 1 | for (let.foo of []);
    |         ^
Cause: [1:8-1:9]: Identifier "let" disallowed as left-hand side expression in strict mode"
`;

exports[`snippet: #0 format[babel]} 4`] = `
"Unexpected token \`.\`, expected an identifier (1:9)
> 1 | for (let.foo of []);
    |         ^"
`;

exports[`snippet: #0 format[babel]} 5`] = `
"Variable declaration expected. (1:9)
> 1 | for (let.foo of []);
    |         ^
Cause: Variable declaration expected."
`;

exports[`snippet: #0 format[babel]} 6`] = `
"The left-hand side of a for-of loop may not start with 'let'. (1:6)
> 1 | for (let.foo of []);
    |      ^
Cause: The left-hand side of a for-of loop may not start with 'let'. (1:5)"
`;

exports[`snippet: #0 format[babel]} 7`] = `
"The left-hand side of a for-of loop may not start with 'let'. (1:6)
> 1 | for (let.foo of []);
    |      ^
Cause: The left-hand side of a for-of loop may not start with 'let'. (1:5)"
`;

exports[`snippet: #0 format[babel]} 8`] = `
"The left-hand side of a for-of loop may not be 'async'. (1:6)
> 1 | for (async of []);
    |      ^
Cause: The left-hand side of a for-of loop may not be 'async'. (1:5)"
`;

exports[`snippet: #0 format[babel]} 9`] = `
"Unexpected token (1:15)
> 1 | for (async of []);
    |               ^
Cause: Unexpected token (1:14)"
`;

exports[`snippet: #0 format[babel]} 10`] = `
"Unexpected token [ (1:15)
> 1 | for (async of []);
    |               ^
Cause: Unexpected token ["
`;

exports[`snippet: #0 format[babel]} 11`] = `
"Invalid left-hand side in for-of (1:6)
> 1 | for (async of []);
    |      ^^^^^"
`;

exports[`snippet: #0 format[babel]} 12`] = `
"The left-hand side of a for-of loop may not be 'async'. (1:6)
> 1 | for (async of []);
    |      ^
Cause: The left-hand side of a for-of loop may not be 'async'. (1:5)"
`;

exports[`snippet: #0 format[babel]} 13`] = `
"The left-hand side of a for-of loop may not be 'async'. (1:6)
> 1 | for (async of []);
    |      ^
Cause: The left-hand side of a for-of loop may not be 'async'. (1:5)"
`;

exports[`snippet: #1 format[babel]} 1`] = `
"The left-hand side of a for-of loop may not start with 'let'. (1:6)
> 1 | for (let().bar of []);
    |      ^
Cause: The left-hand side of a for-of loop may not start with 'let'. (1:5)"
`;

exports[`snippet: #1 format[babel]} 2`] = `
"The keyword 'let' is reserved (1:6)
> 1 | for (let().bar of []);
    |      ^
Cause: The keyword 'let' is reserved"
`;

exports[`snippet: #1 format[babel]} 3`] = `
"Identifier "let" disallowed as left-hand side expression in strict mode (1:9)
> 1 | for (let().bar of []);
    |         ^
Cause: [1:8-1:9]: Identifier "let" disallowed as left-hand side expression in strict mode"
`;

exports[`snippet: #1 format[babel]} 4`] = `
"Unexpected token \`(\`, expected an identifier (1:9)
> 1 | for (let().bar of []);
    |         ^"
`;

exports[`snippet: #1 format[babel]} 5`] = `
"Variable declaration expected. (1:9)
> 1 | for (let().bar of []);
    |         ^
Cause: Variable declaration expected."
`;

exports[`snippet: #1 format[babel]} 6`] = `
"The left-hand side of a for-of loop may not start with 'let'. (1:6)
> 1 | for (let().bar of []);
    |      ^
Cause: The left-hand side of a for-of loop may not start with 'let'. (1:5)"
`;

exports[`snippet: #1 format[babel]} 7`] = `
"The left-hand side of a for-of loop may not start with 'let'. (1:6)
> 1 | for (let().bar of []);
    |      ^
Cause: The left-hand side of a for-of loop may not start with 'let'. (1:5)"
`;

exports[`snippet: #2 format[babel]} 1`] = `
"The left-hand side of a for-of loop may not start with 'let'. (1:6)
> 1 | for (let\`\`.bar of []);
    |      ^
Cause: The left-hand side of a for-of loop may not start with 'let'. (1:5)"
`;

exports[`snippet: #2 format[babel]} 2`] = `
"The keyword 'let' is reserved (1:6)
> 1 | for (let\`\`.bar of []);
    |      ^
Cause: The keyword 'let' is reserved"
`;

exports[`snippet: #2 format[babel]} 3`] = `
"Identifier "let" disallowed as left-hand side expression in strict mode (1:9)
> 1 | for (let\`\`.bar of []);
    |         ^^
Cause: [1:8-1:10]: Identifier "let" disallowed as left-hand side expression in strict mode"
`;

exports[`snippet: #2 format[babel]} 4`] = `
"Unexpected template literal part, expected an identifier (1:9)
> 1 | for (let\`\`.bar of []);
    |         ^^"
`;

exports[`snippet: #2 format[babel]} 5`] = `
"Variable declaration expected. (1:9)
> 1 | for (let\`\`.bar of []);
    |         ^
Cause: Variable declaration expected."
`;

exports[`snippet: #2 format[babel]} 6`] = `
"The left-hand side of a for-of loop may not start with 'let'. (1:6)
> 1 | for (let\`\`.bar of []);
    |      ^
Cause: The left-hand side of a for-of loop may not start with 'let'. (1:5)"
`;

exports[`snippet: #2 format[babel]} 7`] = `
"The left-hand side of a for-of loop may not start with 'let'. (1:6)
> 1 | for (let\`\`.bar of []);
    |      ^
Cause: The left-hand side of a for-of loop may not start with 'let'. (1:5)"
`;
